# zera-modulemanager

./: CMakeLists.txt  data1.qrc  logger-configs-schema.json  modulemanager_config.json  modulemanager_config_dev.json
.github/workflows/: buildAndTest.yml  triggerMetaUpdates.yml
loggerconfigs/: CustomerContext.json  ZeraContext.json  com5003-meas-session.json  com5003-ref-session.json  demo-session.json  demo-session1.json
scripts/: change-modules-ip.in
sessions/: com5003-ced-session.json  com5003-meas-session.json  demo-session1.json  mt310s2-dc-session.json  mt310s2-emob-session.json
src/: jsonloggercontentloader.cpp  jsonloggercontentloader.h  jsonsessionloader.cpp  jsonsessionloader.h  main.cpp  modulemanager.cpp  modulemanager.h  modulemanagerconfig.cpp  modulemanagerconfig.h
tests/: CMakeLists.txt  contentset_invalid.json  contentset_valid.json  test_jsonloggercontentloader.cpp  test_jsonloggercontentloader.h
tests/json-test-files/: simple-valid.json
